<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<resources>
    <string name="app_name">"智慧云"</string>
    <string name="user_login">登录</string>
    <string name="quick_login_text">快捷登录</string>
    <string name="password_login_text">密码登录</string>


    <!--    登录页面文案-->
    <string name="hint_user_login_account">请输入手机号或身份证号</string>
    <string name="user_password_hint_text">"请输入6&#8211;12位密码"</string>
    <string name="description_item_content">工作中心Item</string>
    <string name="hint_user_login_pic">请输入图形验证码</string>
    <string name="text_get_code">获取验证码</string>
    <string name="hint_user_login_code_pop">请输入验证码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="update_tel_phone">更换手机</string>

    <string name="inspect_description">巡检描述</string>
    <string name="inspect_result">巡检结果</string>
    <string name="inspect_time">巡检时间</string>
    <string name="inspect_area">巡检区域</string>
    <string name="has_problem">有问题</string>
    <string name="no_problem">没问题</string>

    <string name="reform_record">整改记录</string>
    <string name="reform_result">整改结果</string>
    <string name="reform_limit">整改期限</string>

    <string name="issue_type">问题类型</string>
    <string name="in_area">所在地区</string>


    <string name="project">项目</string>
    <string name="biao_duan">标段</string>
    <string name="fen_bu_fen_xiang">分部分项</string>
    <string name="look_details">查看详情</string>
    <string name="attachment">考勤</string>
    <string name="function_collection">工作中心</string>
    <string name="mine">我的</string>
    <string name="message">消息</string>
    <string name="input_username">输入用户名</string>
    <string name="input_phone_or_idcard">请输入手机号或者身份证号</string>
    <string name="null_mobile_or_verify_code">手机号码或者验证为空</string>
    <string name="suggestion_title">意见箱</string>
    <string name="different_password">两次密码不一致</string>
    <string name="input_again">重新输入</string>


</resources>
