<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_53"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <TextView
            style="@style/BaseTextViewStyle.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reform_result" />

        <TextView
            android:id="@id/look_detail"
            style="@style/BaseTextViewStyle.Blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:paddingStart="@dimen/dp_16"
            android:text="@string/look_details"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <View style="@style/DividerStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_53"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <TextView
            style="@style/BaseTextViewStyle.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue_type" />

        <TextView
            style="@style/BaseTextViewStyle.Black.14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="xxx" />

    </LinearLayout>

    <View style="@style/DividerStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_53"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <TextView
            style="@style/BaseTextViewStyle.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_area" />

        <TextView
            style="@style/BaseTextViewStyle.Black.14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="xxxx" />

    </LinearLayout>

    <View style="@style/DividerStyle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:gravity="center"
        android:text="整改负责人" />

    <View style="@style/DividerStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_53"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <TextView
            style="@style/BaseTextViewStyle.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reform_limit" />

        <TextView
            style="@style/BaseTextViewStyle.Black.14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="2020-01-18 15:30:00" />
    </LinearLayout>

    <View style="@style/DividerStyle" />

    <include layout="@layout/safe_inspect_record_recycler_footer_item" />

</LinearLayout>