<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_53"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <TextView
            style="@style/BaseTextViewStyle.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project"
            android:textSize="@dimen/sp_14" />

        <TextView
            style="@style/BaseTextViewStyle.Black.14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_26"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="end"
            android:lines="1"
            android:text="xx" />
    </LinearLayout>

    <View style="@style/DividerStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_53"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <TextView
            style="@style/BaseTextViewStyle.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biao_duan"
            android:textSize="@dimen/sp_14" />

        <TextView
            style="@style/BaseTextViewStyle.Black.14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_26"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="end"
            android:lines="1"
            android:text="xx" />
    </LinearLayout>

    <View style="@style/DividerStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_53"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <TextView
            style="@style/BaseTextViewStyle.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fen_bu_fen_xiang"
            android:textSize="@dimen/sp_14" />

        <TextView
            style="@style/BaseTextViewStyle.Black.14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_26"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="end"
            android:lines="1"
            android:text="xx" />
    </LinearLayout>

    <View style="@style/DividerStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_53"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <TextView
            style="@style/BaseTextViewStyle.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspect_area"
            android:textSize="@dimen/sp_14" />

        <TextView
            style="@style/BaseTextViewStyle.Black.14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_26"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="end"
            android:lines="1"
            android:text="xx" />
    </LinearLayout>

    <View
        style="@style/DividerStyle"
        android:layout_height="@dimen/dp_10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_53"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <TextView
            style="@style/BaseTextViewStyle.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspect_result"
            android:textSize="@dimen/sp_14" />

        <TextView
            style="@style/BaseTextViewStyle.Black.14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_26"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="end"
            android:lines="1"
            android:text="xx" />
    </LinearLayout>

    <View
        style="@style/DividerStyle"
        android:layout_height="@dimen/dp_10" />

</LinearLayout>