<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="121dp"
        android:enabled="false"
        android:fontFamily="@font/msyh"
        android:gravity="center"
        android:text="@string/user_login"
        android:textColor="#ff252525"
        android:textSize="@dimen/font_size_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quick_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="41dp"
        android:fontFamily="@font/msyh"
        android:text="@string/quick_login_text"
        android:textColor="@drawable/login_text_color_selector"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_tv" />

    <TextView
        android:id="@+id/password_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:enabled="false"
        android:fontFamily="@font/msyh"
        android:text="@string/password_login_text"
        android:textColor="@drawable/login_text_color_selector"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/quick_login_btn"
        app:layout_constraintLeft_toRightOf="@+id/quick_login_btn" />

    <View
        android:id="@+id/quick_login_divider"
        android:layout_width="57dp"
        android:layout_height="1dp"
        android:layout_marginTop="13dp"
        android:background="#FF007AFF"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@id/quick_login_btn"
        app:layout_constraintRight_toRightOf="@id/quick_login_btn"
        app:layout_constraintTop_toBottomOf="@id/quick_login_btn" />

    <View
        android:id="@+id/password_login_divider"
        android:layout_width="57dp"
        android:layout_height="1dp"
        android:layout_marginTop="13dp"
        android:background="#FF007AFF"
        app:layout_constraintLeft_toLeftOf="@id/password_login_btn"
        app:layout_constraintRight_toRightOf="@id/password_login_btn"
        app:layout_constraintTop_toBottomOf="@id/password_login_btn" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="43dp"
        android:background="#ffdedede"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quick_login_divider" />

    <EditText
        android:id="@+id/login_user_account_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="54dp"
        android:layout_marginTop="36dp"
        android:background="@null"
        android:drawableStart="@mipmap/user_account"
        android:drawablePadding="13dp"
        android:hint="@string/user_account_hint_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3" />

    <View
        android:id="@+id/user_account_underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="43dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/divider_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_user_account_et" />


    <EditText
        android:id="@+id/login_user_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="54dp"
        android:layout_marginTop="36dp"
        android:background="@null"
        android:drawableStart="@mipmap/user_password"
        android:drawableEnd="@mipmap/user_password_hide"
        android:drawablePadding="13dp"
        android:hint="@string/user_password_hint_text"
        android:textColorHint="@color/text_color_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_account_underline" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="43dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/divider_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_user_password_et" />

    <TextView
        android:id="@+id/btn_login"
        style="@style/TextViewStyle1"
        android:layout_width="287dp"
        android:layout_height="43dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="228dp"
        android:text="登录"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

</androidx.constraintlayout.widget.ConstraintLayout>